--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #f3f4f6;
+}
+
 .app {
   .header {
     background-color: #202938;
@@ -11,7 +15,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 2rem;
+    padding: 0 4rem;
 
     .logo {
       span {
@@ -44,8 +48,22 @@
   }
 
   .homepage {
+    .balance {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #fff;
+      padding: 1rem 0;
+
+      span {
+        font-weight: 600;
+        font-size: 1.2rem;
+      }
+    }
+
     h1 {
       text-align: center;
+      margin: 2rem 0 1rem 0;
     }
 
     > span {
@@ -53,6 +71,46 @@
       font-size: 1.5rem;
       display: block;
       text-align: center;
+    }
+
+    .game-zone {
+      padding: 2rem 4rem;
+
+      > div {
+        display: flex;
+        justify-content: space-between;
+
+        > div {
+          display: flex;
+          align-items: center;
+
+          .card {
+            border: 2px solid #000000;
+            border-radius: 10px;
+            height: 300px;
+            width: 200px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 5rem;
+            font-weight: 900;
+            cursor: pointer;
+          }
+
+          button {
+            &, &:focus {
+              margin: 0 1rem;
+              background-color: #4538d2;
+              color: #fff;
+              font-size: 1.2rem;
+              padding: .5rem 1rem;
+              border: none;
+              border-radius: 5px;
+              cursor: pointer;
+            }
+          }
+        }
+      }
     }
   }
 }
