--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -85,10 +85,10 @@ body {
           align-items: center;
 
           .card {
-            border: 2px solid #000000;
+            border: 2px solid #a1a1a1;
             border-radius: 10px;
-            height: 300px;
-            width: 200px;
+            height: 314px;
+            width: 226px;
             display: flex;
             align-items: center;
             justify-content: center;
