--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -45,6 +45,66 @@ body {
 
   .has-error {
     color: red;
+    margin-bottom: .5rem;
+  }
+
+  .login-page {
+    height: calc(100vh - 60px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    > div {
+      width: 40%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h1 {
+      font-weight: 900;
+      margin-bottom: 1rem;
+    }
+
+    form {
+      width: 100%;
+
+      input {
+        &, &:focus {
+          width: 100%;
+          height: 2rem;
+          border: 1px solid rgba(0, 0, 0, .5);
+          padding: .3rem .5rem;
+          outline: none;
+        }
+      }
+
+      > div {
+        &:first-child {
+          input {
+            border-radius: 5px 5px 0 0;
+            border-bottom: none;
+          }
+        }
+        &:nth-child(2) {
+          input {
+            border-radius: 0 0 5px 5px;
+          }
+        }
+      }
+
+      button {
+        width: 100%;
+        background-color: #5046e5;
+        border-radius: 5px;
+        height: 2.5rem;
+        margin-top: 1.5rem;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+        font-size: 1.2rem;
+      }
+    }
   }
 
   .homepage {
