calculate amount multiplied by 2 for win or lose

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -141,6 +141,10 @@ body {
       align-items: center;
       padding-top: 1rem;
 
+      label {
+        margin-bottom: .5rem;
+      }
+
       input {
         &, &:focus {
           width: 40%;
